<resources>
  <string name="app_name">GMC</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="nav_header_title">Android Studio</string>
  <string name="nav_header_subtitle">android.studio@android.com</string>
  <string name="nav_header_desc">Navigation header</string>
  <string name="action_settings">Settings</string>
  <string name="welcome">Welcome</string>
  <string name="login">Login</string>
  <string name="dont_have_a_account">Don\'t have an account?</string>
  <string name="signup">Sign up</string>
  <string name="name">Name</string>
  <string name="password">Password</string>
  <string name="confirm_password">Confrim Password</string>
  <string name="mobile_number">Mobile Number</string>
  <string name="email_address">E-mail Address</string>
</resources>
