<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    >

  <ImageView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      />

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:text="@string/welcome"
      android:textAlignment="center"
      android:textAllCaps="true"
      style="@style/TitleText"
      />

  <EditText
      android:id="@+id/et_email"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:drawableLeft="@drawable/ic_email"
      />

  <EditText
      android:id="@+id/et_password"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:drawableLeft="@drawable/ic_password"
      android:inputType="textPassword"
      />

  <Button
      android:id="@+id/btn_login"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="10dp"
      android:layout_marginTop="20dp"
      android:background="@drawable/button_positive"
      android:text="@string/login"
      android:textColor="@color/buttonTextColor"
      style="@style/ButtonText"
      />

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:orientation="horizontal"
      android:padding="10dp"
      >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dont_have_a_account"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:text="@string/signup"
        android:textAllCaps="true"
        android:textColor="@color/signup_text_color"
        />
  </LinearLayout>

</LinearLayout>